--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ jdk:
   - openjdk8
   - openjdk9
   - openjdk10
-# disabling since jacoco fails
-#  - openjdk11
+  - openjdk11
 cache:
   directories:
   - $HOME/.m2
