--- a/pom.xml
+++ b/pom.xml
@@ -52,18 +52,18 @@
 
     <!-- runtime dependencies -->
 
-    <junit-platform.version>1.2.0</junit-platform.version>
-    <junit-jupiter.version>5.2.0</junit-jupiter.version>
     <slf4j-api.version>1.7.25</slf4j-api.version>
     <slf4j-log4j12.version>1.7.25</slf4j-log4j12.version>
-    <mockito-all.version>2.0.2-beta</mockito-all.version>
-    <slf4j-test.version>1.2.0</slf4j-test.version>
     <api-guardian.version>1.0.0</api-guardian.version>
 
     <lombok.version>1.18.2</lombok.version>
 
     <!-- test dependencies -->
 
+    <junit-platform.version>1.2.0</junit-platform.version>
+    <junit-jupiter.version>5.2.0</junit-jupiter.version>
+    <mockito-all.version>1.10.19</mockito-all.version>
+    <slf4j-test.version>1.2.0</slf4j-test.version>
     <javax-servlet-api.version>3.0.1</javax-servlet-api.version>
     <spring-framework.version>5.0.2.RELEASE</spring-framework.version>
     <spring-test.version>5.0.4.RELEASE</spring-test.version>
