--- a/junit-env-hadoop-mini-clusters/pom.xml
+++ b/junit-env-hadoop-mini-clusters/pom.xml
@@ -22,7 +22,7 @@
   <properties>
     <!-- runtime dependencies -->
 
-    <junit-common.version>1.1.1-SNAPSHOT</junit-common.version>
+    <junit-common.version>1.1.1</junit-common.version>
     <junit-env-extension.version>1.0.4-SNAPSHOT</junit-env-extension.version>
     <hadoop-mini-clusters.version>0.1.14</hadoop-mini-clusters.version>
   </properties>
