--- a/junit-testing-common/pom.xml
+++ b/junit-testing-common/pom.xml
@@ -22,7 +22,7 @@
   <properties>
     <!-- runtime dependencies -->
 
-    <junit-common.version>1.1.1-SNAPSHOT</junit-common.version>
+    <junit-common.version>1.1.1</junit-common.version>
   </properties>
 
   <dependencyManagement>
