--- a/junit-testing-common/pom.xml
+++ b/junit-testing-common/pom.xml
@@ -7,12 +7,12 @@
   <parent>
     <groupId>eu.coldrye.junit</groupId>
     <artifactId>junit-testing</artifactId>
-    <version>1.1</version>
+    <version>1.2-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
   <artifactId>junit-testing-common</artifactId>
-  <version>1.0.1</version>
+  <version>1.0.2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>${project.groupId}:${project.artifactId}</name>
@@ -22,7 +22,7 @@
   <properties>
     <!-- runtime dependencies -->
 
-    <junit-common.version>1.1.0</junit-common.version>
+    <junit-common.version>1.1.1-SNAPSHOT</junit-common.version>
   </properties>
 
   <dependencyManagement>
