--- a/pom.xml
+++ b/pom.xml
@@ -57,17 +57,18 @@
     <slf4j-log4j12.version>1.7.25</slf4j-log4j12.version>
     <api-guardian.version>1.0.0</api-guardian.version>
 
-    <lombok.version>1.18.2</lombok.version>
+    <lombok.version>1.18.4</lombok.version>
 
     <!-- test dependencies -->
 
-    <junit-platform.version>1.2.0</junit-platform.version>
-    <junit-jupiter.version>5.2.0</junit-jupiter.version>
-    <mockito-all.version>1.10.19</mockito-all.version>
+    <junit-platform.version>1.3.1</junit-platform.version>
+    <junit-jupiter.version>5.3.1</junit-jupiter.version>
+    <mockito-all.version>2.0.2-beta</mockito-all.version>
+    <!--<mockito-all.version>1.10.19</mockito-all.version>-->
     <slf4j-test.version>1.2.0</slf4j-test.version>
     <javax-servlet-api.version>3.0.1</javax-servlet-api.version>
-    <spring-framework.version>5.0.2.RELEASE</spring-framework.version>
-    <spring-test.version>5.0.4.RELEASE</spring-test.version>
+    <spring-framework.version>5.1.2.RELEASE</spring-framework.version>
+    <spring-test.version>5.1.2.RELEASE</spring-test.version>
 
     <!-- MAVEN PLUGINS -->
     <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
@@ -296,11 +297,6 @@
           </configuration>
           <dependencies>
             <dependency>
-              <groupId>org.junit.platform</groupId>
-              <artifactId>junit-platform-surefire-provider</artifactId>
-              <version>${junit-platform.version}</version>
-            </dependency>
-            <dependency>
               <groupId>org.junit.jupiter</groupId>
               <artifactId>junit-jupiter-engine</artifactId>
               <version>${junit-jupiter.version}</version>
@@ -366,11 +362,6 @@
                 </execution>
               </executions>
               <dependencies>
-                <dependency>
-                  <groupId>org.junit.platform</groupId>
-                  <artifactId>junit-platform-surefire-provider</artifactId>
-                  <version>${junit-platform.version}</version>
-                </dependency>
                 <dependency>
                   <groupId>org.junit.jupiter</groupId>
                   <artifactId>junit-jupiter-engine</artifactId>
@@ -459,7 +450,6 @@
                       <rule implementation="org.jacoco.maven.RuleConfiguration">
                         <element>BUNDLE</element>
                         <limits>
-                          <!--  implementation is needed only for Maven 2  -->
                           <!-- TODO figure out what this means and how this can be instrumented on a per project maturity level, e.g. SNAPSHOT, RC, RELEASE
                           e.g. 1.0.0-SNAPSHOT will require 60% total coverage and a CCC of at most 30 per method
                           whereas a 1.0.0-RC will require 80% total coverage and a CCC of at most 20 per method
